--- a/WX/pages/user/user.wxss
+++ b/WX/pages/user/user.wxss
@@ -3,13 +3,13 @@
 
 .index-container{
   width: 100%;
-  height: 100%;
+  height: 100;
   position: relative;
 }
 
 .index-container image{
   width: 100%;
-  height: 550px;
+  height: 100vh;
 }
 
 .nickname{
